objects/CS01_Revision_RecordType_Ids__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>used to save all the revision object record type id&apos;s</description>
    <fields>
        <fullName>Local_Implementations_Dual_profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local Implementations Dual profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Implementer_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local Implementer Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Dual_profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local Sales Dual profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local Sales Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Implementations_Dual_profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Implementations Dual profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Implementer_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Implementer Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Sales_Dual_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Sales Dual Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Sales_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Sales Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_LockAll__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason LockAll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Implementer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rev_Implementer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Reason_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Reason Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Dual_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Dual Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_And_Imp_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales And Imp Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS01_Revision_RecordType_Ids</label>
</CustomObject>